# metis-prime

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: litellm_config.yaml
docs/: mcp-setup.md  metis-prime-a-to-z-guide.md  obsidian-web-clipper-setup.md
docs/spec/: second-brain-spec.md
docs/superpowers/plans/: 2026-05-07-phase-1-foundation.md  2026-05-07-phase-2-llm-router.md  2026-05-07-phase-3-wiki-pattern.md  2026-05-08-phase-4-graphify-integration.md  2026-05-08-phase-5-langgraph-orchestration.md  2026-05-10-phase-6-capture-layer.md
infra/: docker-compose.yml  start_litellm.sh  start_vllm.sh
scripts/: Write-InboxNote.ps1  benchmark_tokens.py  install-capture-cron.ps1  install-lint-cron.ps1  install_hooks.py  post-commit  start_mcp_server.sh
src/second_brain/: cli.py  config.py
src/second_brain/agents/: __init__.py  extractors.py  ingest.py  lint.py  query.py  search.py
src/second_brain/agents/graphs/: cost_reporter.py  human_review.py  ingest_graph.py  lint_graph.py  query_graph.py  state.py  task_graph.py
src/second_brain/capture/: clipboard.py  clipper_endpoint.py  journal.py  transcribe.py  watcher.py
src/second_brain/graph/: __init__.py  builder.py  query.py
src/second_brain/llm/: __init__.py  errors.py  metrics.py  policy.py  pricing.py  router.py  types.py
src/second_brain/storage/: __init__.py  frontmatter.py  git_ops.py  vault.py
tests/: conftest.py  test_agents_cli.py  test_capture_cli.py  test_capture_config.py  test_capture_imports.py  test_capture_journal.py  test_cli.py  test_clipboard.py  test_clipper_endpoint.py  test_cost_reporter.py  test_extractors.py  test_graph_builder.py  test_graph_query.py  test_graphs_state.py  test_human_review.py  test_ingest.py  test_ingest_graph.py  test_install_hooks.py  test_lint.py  test_lint_graph.py  test_llm_cli.py  test_llm_config.py  test_llm_metrics.py  test_llm_policy.py  test_llm_router.py  test_llm_types.py  test_pricing.py  test_query.py  test_query_graph.py  test_raw_source.py  test_task_graph.py  test_transcribe.py  test_vault.py  test_watcher.py  test_wiki_search.py
