[project]
name = "second-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pygit2>=1.15",
    "openai>=1.50",
    "rank-bm25>=0.2",
    "graphifyy[mcp]>=0.7.10",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "watchdog>=4.0",
]

[project.optional-dependencies]
proxy = [
    "litellm[proxy]>=1.50",
]
capture = [
    "faster-whisper>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pyperclip>=1.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
second-brain = "second_brain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["second_brain"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["frontmatter", "pygit2", "rank_bm25", "langgraph", "langgraph.*", "langchain_core", "langchain_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["watchdog", "watchdog.*", "faster_whisper", "fastapi", "fastapi.*", "uvicorn", "pyperclip"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
